k8s/apps/adguardhome/adguardhome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: default
spec:
  ports:
  - name: port-53
    port: 53
    targetPort: 53
  - name: port-53
    port: 53
    targetPort: 53
  - name: port-8083
    port: 8083
    targetPort: 8083
  selector:
    app: adguardhome
