k8s/apps/adguardhome/adguardhome-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguardhome-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`adguard.example.com`)
    services:
    - name: adguardhome
      port: 8083
  tls:
    certResolver: cloudflare
